Pagina de login design V0.1.1
1°-->implantado o script para revelar as instruções de senha quando o campo do formulário estiver focado. |

2°-->alteração do botão checkbox "lembrar usuário" para o tipo switch e customização da cor do mesmo a fim de organizar de acordo com a paleta de cores do projeto. |

*Pequenos comentarios foram adicionados a fim de orienta quanto as funcionalidades implementadas

--- a/CSS/login.css
+++ b/CSS/login.css
@@ -3,6 +3,7 @@ body {
   height: 100%;
 }
 
+/* imagem do body na pagina */
 body.login-background{
   background-image: url(/IMG/blur_panoramica_muriaé.png);
   background-size: cover;
@@ -31,6 +32,13 @@ body.login-background{
   border-top-right-radius: 0;
 }
 
+/* altera a cor do botão checkbox do tipo switch */
+.form-check-input:checked{
+  background-color: #003A8C;
+  border-color: #003A8C;
+}
+
+/* customização do botão de submit no formulario de login */
 .btn-custom{
   background-color: #0071CE;
   color: #ffffff;
