--- a/CSS/index.css
+++ b/CSS/index.css
@@ -62,3 +62,18 @@
   .sidebar-card{
     border: none;
   }
+
+  .card_pessoa_fisica {
+    width: 100%;
+    height: 300px;
+    border: none;
+}
+
+.card_pessoa_fisica img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* Faz a imagem preencher o card mantendo proporção e cortando se necessário */
+    border-radius: 8px;
+    /* opcional, para deixar as bordas arredondadas */
+}
