--- a/CSS/login.css
+++ b/CSS/login.css
@@ -1,11 +1,13 @@
 :root {
   --brand-900: #0e2233;
   --brand-700: #1b3b5a;
-  --brand-500: #003A8C;   /* primária */
+  --brand-500: #003A8C;
+  /* primária */
   --brand-300: #8fb6e8;
   --brand-100: #e7f0fb;
 
-  --accent-500: #ffb703;   /* destaque */
+  --accent-500: #ffb703;
+  /* destaque */
   --success-500: #2ea44f;
   --warning-500: #f59f00;
   --danger-500: #d6336c;
